# home_work_9-10

./: .env.example  README.md  main.py  processing.py  pyproject.toml
src/: decorators.py  external_api.py  file_readers.py  generators.py  masks.py  processing.py  serch_string.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_file_readers.py  test_generators.py  test_masks.py  test_processing.py  test_search_string.py  test_utils.py  test_widget.py
